# edge

./: .coverage  .gitignore  DEVELOPMENT.md  KIND.md  MINIKUBE.md  Makefile  PORT.md  README.md  TROUBLESHOOTING.md  docker-compose.yml  generate_onnx_model.py  kind-config.yaml  mkdocs.yml  nginx.conf  pyproject.toml  requirements-test.txt  src.txt  test_endpoints.py  test_onnx_model.py  test_services.sh  tox.ini
ansible/: README.md  ansible.cfg  inventory.yml  requirements.yml  run.sh  test.yml
configs/: Modelfile  grafana-dashboard.json  nginx.conf  prometheus.yml
docker/ollama/: Dockerfile
docs/: api-reference.md  deployment-guide.md  model-conversion.md  onnx-runtime.md  overview.md
docs/api/: reference.md
docs/architecture/: overview.md
docs/examples/: ollama-basic.md  onnx-basic.md
docs/guides/: quickstart.md  troubleshooting.md
edge_ai/: README.md  pyproject.toml
edge_ai/src/edge_ai/: __init__.py  cli.py
edge_ai/tests/: test_validator.py
examples/: README.md  convert_tensorflow_model.py  onnx_curl_example.sh  onnx_inference.py  onnx_quickstart.py  requirements.txt
k8s/: ai-platform.yaml  monitoring.yaml
prometheus/: prometheus.yml
scripts/: README.md  check_status.sh  convert_model.py  deploy.sh  generate_test_model.py  model_operations.sh  run_benchmark.py  show_metrics.sh  test_onnx_service.py
src/: README.md
src/edge_ai/: README.md  benchmark.py
src/edge_ai/cli/: __init__.py  benchmark.py  main.py
src/edge_ai/converters/: __init__.py
src/wronai_edge/: README.md  __init__.py  cli.py
src/wronai_edge/cli/: __init__.py  benchmark.py  main.py
terraform/: main.tf
tests/: test_benchmark.py  test_cli.py  test_cli_basic.py  test_cli_minimal.py  test_model_validation.py  test_validator.py
