[tool.poetry]
name = "edge-ai"
version = "0.1.0"
description = "Edge AI Model Testing and Building Tools"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "edge_ai", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8,<3.12"
onnxruntime = "^1.16.0"
tensorflow = { version = "^2.13.0", optional = true }
tf2onnx = { version = "^1.14.0", optional = true }
torch = { version = "^2.0.0", optional = true }
torchvision = { version = "^0.15.0", optional = true }
numpy = "^1.24.0"
pydantic = "^2.0.0"
click = "^8.1.3"
rich = "^13.4.2"
onnx = "^1.14.0"

[tool.poetry.extras]
tensorflow = ["tensorflow", "tf2onnx"]
torch = ["torch", "torchvision"]
all = ["tensorflow", "tf2onnx", "torch", "torchvision"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=edge_ai --cov-report=term-missing"
