[tool.poetry]
name = "edge-ai"
version = "0.1.0"
description = "Edge AI Model Testing and Building Tools"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8,<3.12"
onnxruntime = "^1.16.0"
numpy = "^1.24.0"
pydantic = "^2.0.0"
click = "^8.1.3"
rich = "^13.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=edge_ai --cov-report=term-missing"
